--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev": "concurrently --kill-others \"vite\" \"json-server --watch data.json --port 3004\""
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -40,6 +40,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "concurrently": "^7.5.0",
     "json-server": "^0.17.0",
     "nodemon": "^2.0.20",
     "vite": "^3.0.7"
