--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-ranger": "^2.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
+    "react-select": "^5.6.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.3",
