--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@hookform/error-message": "^2.0.1",
     "@mui/material": "^5.10.5",
     "@mui/styled-engine-sc": "^5.10.1",
     "@reduxjs/toolkit": "^1.8.6",
