--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "components-shop",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://trungtin160295.github.io/cover-coolmate.me/",
   "type": "module",
   "scripts": {
     "build": "vite build",
     "preview": "vite preview",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "dev": "concurrently --kill-others \"vite\" \"json-server --watch data.json --port 3004\""
   },
   "dependencies": {
@@ -17,6 +20,7 @@
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-bootstrap": "^2.5.0",
@@ -46,4 +50,5 @@
     "nodemon": "^2.0.20",
     "vite": "^3.0.7"
   }
+ 
 }
